# paradedb

./: .codespellignore  .codespellrc  .dockerignore  .env  .eslintrc.json  .flake8  .gitattributes  .gitignore  .gitmodules  .hadolint.yaml  .markdownlint.yaml  .pre-commit-config.yaml  .prettierignore  .prettierrc 2.json  .prettierrc.json  1  71  ;  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Caddyfile  Cargo.toml  DSM_EXCHANGE_DESIGN.md  Dockerfile  Dockerfile.prod  HAYSTACK_ANALYSIS.md  LANGCHAIN_EXAMPLES.md  LANGCHAIN_README.md  LICENSE  META.json.in  Makefile  README.md  RELEASE.md  RPC_SERVER_MPP_PLAN.md  SECURITY.md  THANKYOU.md  \  codecov.yml  (+71 more)
benchmarks/: .gitignore  Cargo.toml  DATASET_PREPARATION.md  README.md  benchmark-elasticsearch.sh  benchmark-paradedb.sh  benchmark-tsquery.sh  benchmark-typesense.sh  benchmark.md  benchmark.sh  create-table.sql  data.js  generate.sql  index.md  index.sh  results_pg_search_benchmark_results.csv  results_pg_search_index_creation.csv  results_pg_search_postgres_settings.csv  results_pg_search_test_info.csv  vibegraph.html  vibegraph_v2.html
benchmarks/create_index/: pg_search.sql  tuned_postgres.sql
benchmarks/datasets/: sample_config.toml
benchmarks/docs-25M/: data.js
benchmarks/helpers/: elastify-data.py  elastify_data.py  get_data.sh  load_data.sql  typesense_requests.py
benchmarks/logs-100K/: data.js
benchmarks/logs-100M/: data.js
benchmarks/logs-10K/: data.js  index.html
benchmarks/logs-10M/: data.js
benchmarks/logs-1M/: data.js
benchmarks/mpp_scaling/: FINDINGS.md  MESH_MPSC_RING_DESIGN.md  MESH_MULTIPLEXING_DESIGN.md  README.md  baseline_1m.txt  path_b_lever3_results.txt  path_b_queue_sweep.sh  path_b_queue_sweep_results.txt  path_c_results.txt  path_c_validate.sh  queries.sql  run.sh  setup.sql  smoke_instruments.sql
benchmarks/prepare_table/: pg_search.sql  tuned_postgres.sql
benchmarks/prewarm/: pg_search.sql  tuned_postgres.sql
benchmarks/queries/: bucket.sql  cardinality.sql  count.sql  json.sql  phrase.sql  term.sql  top_n.sql
benchmarks/scripts/: generate_cohere_ground_truth.sh  split_cohere_chunks.sh
benchmarks/src/: backrest.rs  config.rs  convert.rs  duckdb_utils.rs  join_perf.rs  lib.rs  main.rs  sample.rs  utils.rs
cargo-paradedb/: Cargo.toml  README.md  env.template  run_pg_benchmarks.sh
cargo-paradedb/pgbench-logs-with-stats/: benchmark_summary.txt
cargo-paradedb/sql-pgnative/: asc_sort_timestamp.sql  asc_sort_timestamp_can_match_shortcut.sql  asc_sort_with_after_timestamp.sql  composite-date_histogram-daily.sql  composite-terms-keyword.sql  composite-terms.sql  composite_terms-keyword.sql  date_histogram_hourly_agg.sql  date_histogram_minute_agg.sql  default.sql  desc_sort_timestamp.sql  desc_sort_timestamp_can_match_shortcut.sql  desc_sort_with_after_timestamp.sql  keyword-in-range.sql  keyword-terms-low-cardinality.sql  keyword-terms.sql  multi_terms-keyword.sql  query-string-on-message-filtered-sorted-num.sql  query-string-on-message-filtered.sql  query-string-on-message.sql  range-auto-date-histo-with-metrics.sql  range-auto-date-histo.sql  range-numeric.sql  range.sql  range_field_conjunction_big_range_big_term_query.sql  range_field_conjunction_small_range_big_term_query.sql  range_field_conjunction_small_range_small_term_query.sql  range_field_disjunction_big_range_small_term_query.sql  scroll.sql  sort_keyword_no_can_match_shortcut.sql  sort_numeric_asc.sql  sort_numeric_asc_with_match.sql  sort_numeric_desc.sql  term.sql  (+3 more)
dst/: Cargo.toml
dst/src/: lib.rs
macros/: Cargo.toml
pg_analytics/: .gitignore  .history  Cargo.toml  README.md  pg_analytics.control  runtests.sh  sample_db_backup.sql
pg_bm25/: .gitignore  Cargo.toml  Makefile  README.md  pg_bm25.control  regression.out  runtests.sh
pg_columnar/: .gitignore  Cargo.toml  README.md  pg_columnar.control
pg_lakehouse/: .gitignore  Cargo.toml  README.md  pg_lakehouse.control  runtests.sh
pg_search/: .gitignore  Cargo.toml  README.md  build.rs  concurrently.patch  configure.sh  issue_1565.sql  pg_search.control  regression.diffs  regression.out  runtests.sh
pg_sparse/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  META.json  Makefile  Makefile.win  README.md  default_10145942512776831803_0_17826.profraw  default_10145942512776831803_0_17910.profraw  default_10145942512776831803_0_18008.profraw  default_10145942512776831803_0_18362.profraw  default_10145942512776831803_0_18616.profraw  default_10145942512776831803_0_19376.profraw  default_10145942512776831803_0_19547.profraw  default_10145942512776831803_0_19721.profraw  default_10145942512776831803_0_19916.profraw  default_10145942512776831803_0_20068.profraw  default_10145942512776831803_0_20248.profraw  default_10145942512776831803_0_20606.profraw  default_10145942512776831803_0_20737.profraw  default_10145942512776831803_0_21054.profraw  default_10145942512776831803_0_21301.profraw  default_10145942512776831803_0_21516.profraw  default_10145942512776831803_0_21821.profraw  default_10145942512776831803_0_22888.profraw  default_10145942512776831803_0_24110.profraw  default_10145942512776831803_0_24203.profraw  default_10145942512776831803_0_24309.profraw  default_10145942512776831803_0_24417.profraw  default_10145942512776831803_0_24529.profraw  default_10145942512776831803_0_24608.profraw  default_10145942512776831803_0_24839.profraw  default_10145942512776831803_0_25038.profraw  default_10145942512776831803_0_25795.profraw  default_10145942512776831803_0_25990.profraw  default_10145942512776831803_0_26162.profraw  default_10145942512776831803_0_26319.profraw  default_10145942512776831803_0_26511.profraw  default_10145942512776831803_0_26696.profraw  (+288 more)
realtime_server/: pyproject.toml
shared/: Cargo.toml  shared.control
stressgres/: Cargo.toml  README.md  data.js  index.html  newgraph.html  runheadless.sh  runtui.sh  vibegraph.html
tests/: Cargo.toml  README.md  conftest.py  create_tables.sql  docker-compose.yml  fill_tables.sql  postgres.conf  test_client.py  test_pipeline.py  test_python_client.py
tokenizers/: Cargo.toml
(+4887 files in other folders)
