[workspace]
resolver = "2"
members = [
  "benchmarks",
  "dst",
  "macros",
  "pg_search",
  "stressgres",
  "tests",
  "tokenizers",
]

[workspace.package]
version = "0.24.3"
edition = "2021"
license = "AGPL-3.0"

[profile.dev]
panic = "unwind"

[profile.release]
# Note: We switched from `fat` to `thin` LTO to reduce compile time memory usage, which had been
# sufficient to cause swapping on local machines, and to kill CI builds on smaller instances.
# Benchmarks were unaffected.
lto = "thin"
panic = "unwind"
opt-level = 3
codegen-units = 1

[profile.release-with-debug]
inherits = "release"
debug = true

[workspace.dependencies]
tantivy = { git = "https://github.com/paradedb/tantivy.git", package = "tantivy", rev = "3c423758142d018d92f7e38d93fc5d23b94287d1", features = [
  "columnar-zstd-compression",
  "lz4-compression",
  "paradedb",
  "quickwit",                  # for sstable support
  "stemmer",
  "stopwords",
], default-features = false }
pgrx = "=0.19.0"
pgrx-tests = "=0.19.0"
tantivy-jieba = "0.20.0"

[patch.crates-io]
tantivy-tokenizer-api = { git = "https://github.com/paradedb/tantivy.git", package = "tantivy-tokenizer-api", rev = "3c423758142d018d92f7e38d93fc5d23b94287d1" }

[workspace.lints.clippy]
large_futures = "warn"
