[tool.poetry]
name = "retake"
version = "0.0.0"
description = "Open Source Neural Search Engine"
authors = ["Ming Ying <ming.ying.nyc@gmail.com>", "Philippe Noël <philippemnoel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.0.2"
sentence-transformers = "^2.2.2"
tqdm = "^4.65.0"
fastapi = "^0.100.0"
uvicorn = "^0.23.1"
python-dateutil = "^2.8.2"
psycopg2-binary = "^2.9.6"
types-psycopg2 = "^2.9.21.10"
requests = "^2.31.0"
fastavro = "^1.8.0"
confluent-kafka = "^2.2.0"
loguru = "^0.7.0"
retakesearch-py = "^2.2.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.4.1"
pytest = "^7.4.0"
types-requests = "^2.31.0.2"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
