[tool.poetry]
name = "retake"
version = "0.0.0"
description = "Real-Time Universal Search Infra for Developers"
authors = ["Ming Ying <ming.ying.nyc@gmail.com>", "Philippe Noël <philippemnoel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.0.2"
sentence-transformers = "^2.2.2"
tqdm = "^4.65.0"
fastapi = "^0.100.0"
uvicorn = "^0.23.1"
python-dateutil = "^2.8.2"
psycopg2-binary = "^2.9.6"
types-psycopg2 = "^2.9.21.10"
loguru = "^0.7.0"
posthog = "^3.0.1"
retakesearch-py = { version="^2.2.4", extras=["async"] }
httpx = "^0.24.1"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.4.1"
pytest = "^7.4.0"
types-flask = "^1.1.6"
pytest-docker = "^2.0.0"
flake8 = "^6.0.0"
httpx = "^0.24.1"
docker = "^6.1.3"
mock = "^5.1.0"
faker = "19.2.0"
types-urllib3 = "^1.26.25.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
