[package]
name = "benchmarks"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
clap = { version = "4.5.40", features = ["derive", "env"] }
anyhow = "1.0"
serde_json = "1.0"
sqlx = { version = "0.8.6", features = [
  "postgres",
  "runtime-async-std",
  "time",
  "bigdecimal",
  "uuid",
  "chrono",
] }
pretty_assertions = "1.4.1"
tokio = { version = "1.45", features = ["full"] }

[lib]
name = "paradedb"
path = "src/lib.rs"
