[package]
name = "benchmarks"
description = "Benchmarking harness for pg_search"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
clap = { version = "4.6.1", features = ["derive", "env"] }
anyhow = "1.0"
serde_json = "1.0"
sqlx = { version = "0.8.6", features = [
  "postgres",
  "runtime-async-std",
  "time",
  "bigdecimal",
  "uuid",
  "chrono",
] }
tokio = { version = "1.52", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.8"
duckdb = { version = "1.10502.0", features = ["bundled"] }
distrs = "0.2.3"

[dev-dependencies]
approx = "0.5.1"
rstest = "0.25.0"

[lib]
name = "paradedb"
path = "src/lib.rs"
