[package]
name = "cargo-paradedb"
version = "0.10.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.87"
async-std = "1.13.0"
chrono = { version = "0.4.38", features = ["clock", "alloc", "serde"] }
clap = { version = "4.5.17", features = ["derive", "env"] }
cmd_lib = "1.9.4"
criterion = { version = "0.5.1", features = ["async_std"] }
dotenvy = "0.15.7"
futures = "0.3.30"
glob = "0.3.1"
itertools = "0.12.1"
once_cell = "1.19.0"
reqwest = { version = "0.12.7", features = ["json", "blocking"] }
serde = "1.0.210"
serde_json = "1.0.128"
sqlx = { version = "0.7.4", features = [
  "postgres",
  "runtime-async-std",
  "chrono",
  "tls-native-tls",
] }
tempfile = "3.12.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
rstest = "0.18.2"

[package.metadata.cargo-machete]
ignored = ["chrono"]
