[package]
name = "cargo-paradedb"
version = "0.10.3"
edition = "2021"

[dependencies]
anyhow = "1.0.87"
async-std = "1.13.0"
async-lock = "3.4.0"
chrono = { version = "0.4.38", features = ["clock", "alloc", "serde"] }
clap = { version = "4.5.17", features = ["derive", "env"] }
cmd_lib = "1.9.4"
criterion = { version = "0.5.1", features = ["async_std"] }
dotenvy = "0.15.7"
futures = "0.3.30"
glob = "0.3.1"
itertools = "0.12.1"
once_cell = "1.19.0"
reqwest = { version = "0.12.7", features = ["json", "blocking"] }
ureq = { version = "2.6", features = ["json"] }
serde = "1.0.210"
serde_json = "1.0.128"
sqlx = { version = "0.7.4", features = [
  "postgres",
  "runtime-async-std",
  "uuid",
  "chrono",
  "tls-native-tls",
] }
tempfile = "3.12.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "time"] }
datafusion = { version = "37.1.0" }
tokio = { version = "1.0", features = ["full"] }
bytes = { version = "1.7.1" }
rand = { version = "0.8.5" }
aws-config = { version = "1.5.6" }
aws-sdk-s3 = { version = "1.49.0" }
testcontainers = { version = "0.22.0" }
testcontainers-modules = { version = "0.10.0", features = ["localstack"] }
cargo_metadata = { version = "0.18.0" }
camino = { version = "1.0.7", features = ["serde1"] }
rayon = { version = "1.5" }
url = { version = "2.3" }

[dev-dependencies]
rstest = "0.18.2"

[package.metadata.cargo-machete]
ignored = ["chrono"]
