[package]
name = "cargo-paradedb"
version = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.96"
async-std = "1.13.0"
chrono = { version = "0.4.39", features = ["clock", "alloc", "serde"] }
clap = { version = "4.5.30", features = ["derive", "env"] }
cmd_lib = "1.9.5"
criterion = { version = "0.5.1", features = ["async_std"] }
dotenvy = "0.15.7"
futures = "0.3.31"
glob = "0.3.2"
itertools = "0.14.0"
once_cell = "1.20.3"
reqwest = { version = "0.12.12", features = ["json", "blocking"] }
serde = "1.0.218"
serde_json = "1.0.139"
sqlx = { version = "0.8.3", features = [
  "postgres",
  "runtime-async-std",
  "chrono",
  "tls-native-tls",
] }
tempfile = "3.17.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dev-dependencies]
rstest = "0.24.0"

[package.metadata.cargo-machete]
ignored = ["chrono"]
