[package]
name = "macros"
description = "Code generation macros for pg_search"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.95"
regex = "1.11.1"
syn = { version = "2.0.104", features = ["full"] }
uuid = { version = "1.17.0", features = ["v4"] }
