[package]
name = "macros"
description = "Code generation macros for pg_search"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.103"
syn = { version = "2.0.111", features = ["full"] }
uuid = { version = "1.19.0", features = ["v4"] }
quote = "1.0.42"
