[package]
name = "pg_analytics"
description = "Real-time analytics for PostgreSQL using columnar storage and vectorized execution"
version = "0.5.4"
edition = "2021"
license = "AGPL-3.0"

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg16"]
pg12 = ["pgrx/pg12", "pgrx-tests/pg12" ]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13" ]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14" ]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15" ]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16" ]
pg_test = []
telemetry = ["shared/telemetry"]

[dependencies]
pgrx = "=0.11.2"
serde = "1.0.193"
serde_json = "1.0.107"
shared = { version = "0.1.0", path = "../shared" }
lazy_static = "1.4.0"
async-std = { version = "1.12.0", features = ["tokio1"] }
parking_lot = "0.12.1"
async-trait = "0.1.77"
chrono = "0.4.33"
deltalake = { version = "0.17.0", features = ["datafusion"]}
thiserror = "1.0.56"
indexmap = "2.2.2"
bytes = "1.5.0"

[dev-dependencies]
anyhow = "1.0.79"
async-std = { version = "1.12.0", features = ["attributes"] }
futures-util = "0.3.30"
pgrx-tests = "=0.11.2"
pretty_assertions = "1.4.0"
rstest = "0.18.2"
shared = { path = "../shared", features = ["fixtures"] }
sqlx = { version = "0.7.3", features = ["postgres", "runtime-async-std", "time", "bigdecimal", "uuid"] }
time = "0.3.32"

[package.metadata.pgrx]
pg_sys_includes = ["pg_query_parse.h", "pg_plan.h"]
