[package]
name = "pg_bm25"
description = "Full text search for PostgreSQL using BM25"
version = "0.0.0"
edition = "2021"
license = "AGPL-3.0"

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg15"]
pg11 = ["pgrx/pg11", "pgrx-tests/pg11"]
pg12 = ["pgrx/pg12", "pgrx-tests/pg12"]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13"]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
pg_test = []

[dependencies]
csv = "1.2.2"
json5 = "0.4.1"
memoffset = "0.9.0"
pgrx = "=0.10.1"
rustc-hash = "1.1.0"
serde = "1.0.188"
serde_json = "1.0.105"
serde_qs = "0.12.0"
tantivy = { git = "https://github.com/paradedb/tantivy.git", package = "paradedb-tantivy", rev = "227ddda1" }
utoipa = "3.5.0"

[dev-dependencies]
pgrx-tests = "=0.10.1"
