[package]
name = "pg_bm25"
description = "Full text search for PostgreSQL using BM25"
version = "0.4.3"
edition = "2021"
license = "AGPL-3.0"

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg15"]
pg12 = ["pgrx/pg12", "pgrx-tests/pg12"]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13"]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
pg_test = []
telemetry = ["shared/telemetry"]

[dependencies]
chrono = "0.4.31"
csv = "1.2.2"
indexmap = "2.1.0"
json5 = "0.4.1"
lindera-core = "0.27.1"
lindera-dictionary = "0.27.1"
lindera-tokenizer = { version = "0.27.1", features = [
  "cc-cedict-compress",
  "cc-cedict",
  "ipadic-compress",
  "ipadic",
  "ko-dic-compress",
  "ko-dic",
] }
memoffset = "0.9.0"
once_cell = "1.18.0"
pgrx = "=0.11.1"
reqwest = "0.11.22"
rustc-hash = "1.1.0"
serde = "1.0.188"
serde_json = "1.0.105"
serde_path_to_error = "0.1.14"
shared = { version = "0.1.0", path = "../shared" }
tantivy = { git = "https://github.com/paradedb/tantivy.git", package = "paradedb-tantivy", rev = "f4972d3a" }
tiny_http = "0.12.0"
utoipa = "3.5.0"

[dev-dependencies]
pgrx-tests = "=0.11.1"
