[package]
name = "pg_columnar"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg15"]
pg11 = ["pgrx/pg11", "pgrx-tests/pg11" ]
pg12 = ["pgrx/pg12", "pgrx-tests/pg12" ]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13" ]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14" ]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15" ]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16" ]
pg_test = []
telemetry = ["shared/telemetry"]

[dependencies]
datafusion = "33.0.0"
pgrx = "=0.11.0"
shared = { version = "0.1.0", path = "../shared" }

[dev-dependencies]
pgrx-tests = "=0.11.0"
