[package]
name = "pg_columnar"
description = "Columnar storage for PostgreSQL"
version = "0.0.0"
edition = "2021"
license = "AGPL-3.0"

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg15"]
pg12 = ["pgrx/pg12", "pgrx-tests/pg12"]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13"]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
pg_test = []
telemetry = ["shared/telemetry"]

[dependencies]
pgrx = "=0.11.1"
serde = "1.0.188"
serde_json = "1.0.107"
shared = { version = "0.1.0", path = "../shared" }
substrait = "0.20.0"

[dev-dependencies]
pgrx-tests = "=0.11.1"

[package.metadata.pgrx]
pg_sys_includes = ["pg_query_parse.h", "pg_plan.h"]
