[package]
name = "pg_columnar"
description = "Columnar storage for PostgreSQL"
version = "0.4.3"
edition = "2021"
license = "AGPL-3.0"

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg15"]
pg12 = ["pgrx/pg12", "pgrx-tests/pg12" ]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13" ]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14" ]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15" ]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16" ]
pg_test = []
telemetry = ["shared/telemetry"]
simd = ["datafusion/simd"]

[dependencies]
pgrx = "=0.11.1"
serde = "1.0.193"
serde_json = "1.0.107"
shared = { version = "0.1.0", path = "../shared" }
lazy_static = "1.4.0"
datafusion = "34.0.0"
async-std = { version = "1.12.0", features = ["tokio1"] }
parking_lot = "0.12.1"
async-trait = "0.1.77"
substrait = "0.21.0"
deltalake = { version = "0.16.5", features = ["datafusion"] }
chrono = "0.4.31"
thiserror = "1.0.56"

[dev-dependencies]
pgrx-tests = "=0.11.1"

[package.metadata.pgrx]
pg_sys_includes = ["pg_query_parse.h", "pg_plan.h"]
