[package]
name = "pg_lakehouse"
description = "An analytical query engine for Postgres"
version = "0.7.0"
edition = "2021"
license = "AGPL-3.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["pg16"]
pg12 = ["pgrx/pg12", "pgrx-tests/pg12"]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13"]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
pg_test = []
telemetry = ["shared/telemetry"]

[dependencies]
async-std = { version = "1.12.0", features = ["tokio1"] }
chrono = "0.4.34"
datafusion = "37.1.0"
deltalake = { git = "https://github.com/paradedb/delta-rs.git", branch = "main", features = [
  "datafusion",
] }
object_store = { version = "0.9.1", features = ["aws", "http"] }
object_store_opendal = { git = "https://github.com/apache/opendal.git", rev = "79ab57f" }
opendal = { git = "https://github.com/apache/opendal.git", features = [
  "services-gcs",
  "services-s3",
], rev = "79ab57f" }
pgrx = "0.11.3"
shared = { path = "../shared" }
supabase-wrappers = { git = "https://github.com/paradedb/wrappers", default-features = false }
thiserror = "1.0.59"
url = "2.5.0"

[dev-dependencies]
pgrx-tests = "0.11.3"
