[package]
name = "pg_lakehouse"
description = "An analytical query engine for Postgres"
version = "0.7.5"
edition = "2021"
license = "AGPL-3.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["pg16"]
pg12 = ["pgrx/pg12", "pgrx-tests/pg12"]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13"]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
pg_test = []

[dependencies]
anyhow = "1.0.83"
async-std = { version = "1.12.0", features = ["tokio1", "attributes"] }
chrono = "0.4.34"
dashmap = "5.5.3"
datafusion = { version = "37.1.0", features = ["avro"] }
deltalake = { version = "0.17.3", features = [
  "datafusion",
  "s3",
  "gcs",
  "azure",
] }
object_store = { version = "0.9.1", features = ["aws", "http"] }
object_store_opendal = { git = "https://github.com/apache/opendal.git", rev = "79ab57f" }
opendal = { git = "https://github.com/apache/opendal.git", features = [
  "services-azblob",
  "services-azdls",
  "services-gcs",
  "services-s3",
], rev = "79ab57f" }
pgrx = "0.11.3"
serde = "1.0.201"
shared = { path = "../shared" }
signal-hook = "0.3.17"
signal-hook-async-std = "0.2.2"
supabase-wrappers = { git = "https://github.com/paradedb/wrappers.git", default-features = false, rev = "e5dc405" }
thiserror = "1.0.59"
url = "2.5.0"

[dev-dependencies]
aws-config = "1.5.1"
aws-sdk-s3 = "1.34.0"
futures = "0.3.30"
pgrx-tests = "0.11.3"
rstest = "0.19.0"
serde_arrow = { version = "0.11.3", features = ["arrow-51"] }
shared = { path = "../shared", features = ["fixtures"] }
sqlx = { version = "0.7.4", features = [
  "postgres",
  "runtime-async-std",
  "time",
  "bigdecimal",
  "uuid",
] }
testcontainers = "0.16.7"
testcontainers-modules = { version = "0.4.2", features = ["localstack"] }
