[package]
name = "pg_search"
description = "Full text search for PostgreSQL using BM25"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
build = "build.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["pg18"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17"]
pg18 = ["pgrx/pg18", "pgrx-tests/pg18"]
pg_test = ["dep:proptest"]
unsafe-postgres = ["pgrx/unsafe-postgres"]
block_tracker = [] # for debugging when blocks are acquired and released
debug-logging = [
  "dep:env_logger",
] # enables env_logger for dependency debug output

[dependencies]
async-trait = "0.1.89"
stable_deref_trait = "1.2.1"
anyhow = { version = "1.0.100", features = ["backtrace"] }
arrow-array = "57.2.0"
arrow-buffer = "57.2.0"
arrow-schema = "57.2.0"
bitpacking = "0.9.2"
chrono = "0.4.42"
time = "0.3.44"
derive_more = { version = "2.1.0", features = ["full"] }
env_logger = { version = "0.11.8", optional = true }
json5 = "0.4.1"
memoffset = "0.9.1"
once_cell = "1.21.3"
parking_lot = "0.12.5"
tokenizers = { path = "../tokenizers" }
pgrx.workspace = true
rustc-hash = "2.1.1"
serde = "1.0.228"
serde_json = { version = "1.0.145", features = ["preserve_order"] }
serde_cbor = "0.11.2"
tantivy.workspace = true
thiserror = "2.0.17"
ordered-float = "5.1.0"
uuid = "1.19.0"
strum = { version = "0.27.2" }
serde_path_to_error = "0.1.20"
bincode = { version = "2.0.1", features = [
  "serde",
  "std",
], default-features = false }
rand = "0.9.2"
proptest = { version = "1.9.0", optional = true }
postcard = { version = "1.1.3", features = [
  "use-std",
], default-features = false }
# same version as tantivy uses
regex = { version = "1.12.2", default-features = false, features = [
  "std",
  "perf",
  "unicode",
] }
tantivy-fst = { git = "https://github.com/paradedb/fst.git" }
lazy_static = "1.5.0"
macros = { path = "../macros" }
half = "2.7.1"
bytemuck = { version = "1.24.0", features = ["derive", "min_const_generics"] }
decimal-bytes = "0.4.2"
paste = "1.0.15"
typetag = "0.2"
tokio = { version = "1", features = ["rt"] }
bytes = { version = "1", features = ["serde"] }
datafusion = { git = "https://github.com/paradedb/datafusion.git", default-features = false, rev = "41bc40ce3a662ebff1ed88fa8f613d6e4225b29c" }
datafusion-proto = { git = "https://github.com/paradedb/datafusion.git", default-features = false, rev = "41bc40ce3a662ebff1ed88fa8f613d6e4225b29c" }
futures = "0.3"

[dev-dependencies]
pgrx-tests.workspace = true
rstest = "0.25.0"
proptest = "1.9.0"

[build-dependencies]
vergen = { version = "9.0.6", features = ["build", "cargo", "rustc", "si"] }
vergen-git2 = "1.0.7"

[package.metadata.cargo-machete]
ignored = ["indexmap", "libc", "tantivy-common"]

[[bin]]
name = "pgrx_embed_pg_search"
path = "./src/bin/pgrx_embed.rs"
