[package]
name = "pg_sparse"
description = "Sparse vector similarity search in Postgres"
version = "0.0.0"
edition = "2021"
license = "AGPL-3.0"

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg15"]
pg11 = ["pgrx/pg11", "pgrx-tests/pg11"]
pg12 = ["pgrx/pg12", "pgrx-tests/pg12"]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13"]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
pg_test = []
telemetry = ["shared/telemetry"]

[dependencies]
csv = "1.2.2"
hnswlib = { git = "https://github.com/paradedb/hnswlib.git", rev="72acf59d38dad2af9278de66a40e183f2fb17e8e" }
memoffset = "0.9.0"
pgrx = "=0.11.0"
rustc-hash = "1.1.0"
shared = { version = "0.1.0", path = "../shared" }
serde = "1.0.188"
serde_json = "1.0.105"
serde_qs = "0.12.0"
utoipa = "3.5.0"

[dev-dependencies]
pgrx-tests = "=0.11.0"
